syntax = "proto3";

package dummy.v1;

import "dummy/v1/enum.proto";

message Dummy {
  string name = 1;
  int32 value = 2;
  repeated string values = 3;
  TestEnumType test_type = 4;

  DummyConfigA config_a = 11;
  DummyConfigB config_b = 12;
}

message DummyConfigA {
  string name = 1;
  string value = 2;
}

message DummyConfigB {
  string name = 1;
  int64 value = 2;
}
